# gmail-cleanup-agent

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  release.yml  test.yml
config/: backend.env.example  labels.example.yaml  rules.example.md  whitelist.example.txt
docs/: cost-math.md  llama-server-setup.md  oauth-setup.md  privacy.md  results.md  run-stats.json
scripts/: apply_from_log.py  cleanup_junk_keeps.py  run-cleanup.sh
src/gmail_cleanup/: __init__.py  __main__.py  applylog.py  cli.py  gmail_client.py  portforward.py  prompt.py
src/gmail_cleanup/backends/: __init__.py  claude.py  ollama.py  openai.py
tests/: _fakes.py  conftest.py  test_applylog.py  test_backend_claude.py  test_backend_ollama.py  test_backend_openai.py  test_backends_factory.py  test_cli_apply_log.py  test_cli_classify.py  test_cli_misc.py  test_cli_relabel.py  test_dotenv_loading.py  test_gmail_helpers.py  test_gmail_retry.py  test_gmail_search_skip.py  test_portforward.py  test_prompt.py
