[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-llm-cleanup"
version = "1.2.0"
description = "Triage a Gmail inbox with a local or cloud LLM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Brett Rosequist" }]
keywords = [
    "gmail", "email", "llm", "ollama", "claude", "openai", "classification",
    "inbox", "triage", "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
dependencies = [
    "google-api-python-client>=2.140.0",
    "google-auth>=2.34.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/brosequist/gmail-cleanup-agent"
Repository = "https://github.com/brosequist/gmail-cleanup-agent"
Issues = "https://github.com/brosequist/gmail-cleanup-agent/issues"
Changelog = "https://github.com/brosequist/gmail-cleanup-agent/releases"

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
openai = ["openai>=1.55.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
gmail-cleanup = "gmail_cleanup.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    # google-auth-oauthlib emits a DeprecationWarning on 3.12+ for some
    # internal datetime usage; not actionable from our side.
    "ignore::DeprecationWarning:google.*",
]
